# todo-timer

./: .gitignore  TODO.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/assets/styles/: global.css
src/components/: AppLayout.vue
src/router/: index.ts
src/stores/: focusStore.ts  taskStore.ts  timerStore.ts
src/utils/: database.ts
src/views/: HistoryView.vue  StatsView.vue  TasksView.vue  TimerView.vue
